--- a/res.css
+++ b/res.css
@@ -9,6 +9,7 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
     
     .undoS {
         margin-bottom: 0px;
+        color: papayawhip;
     }
 
 .listi{
@@ -20,8 +21,10 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
     display:block;
     }
     
-    html, body {background: #181818; font-family: 'Lato', helvetica, arial, sans-serif; font-size: 16px; color: #222;}
-    
+    html, body {background: pink; font-family: 'Lato', helvetica, arial, sans-serif; font-size: 16px; color: papayawhip;}
+    /* color used to be #222 */
+    /* background used to be #181818 */
+
     .clear {clear: both;}
 
     .ka {
@@ -33,21 +36,26 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
         font-size: 1em;
         line-height: 1.4em;
         margin-bottom: 20px;
-        color: #444;
+        /* color: #444; */
+    color: papayawhip;
     }
     
     #cv {
         width: 90%;
         max-width: 800px;
-        background: #f3f3f3;
+        /* background: #f3f3f3; */
+        /* background: #444; */
+        background: #2d2d2d;
         margin: 30px auto;
     }
     /* #444 */
     /* #f3f3f3 for whiteish background */
     .mainDetails {
         padding: 25px 35px;
-        border-bottom: 2px solid #cf8a05;
-        background: #ededed;
+        /* border-bottom: 2px solid #cf8a05; */
+        border-bottom: 2px solid pink;
+        /* background: #ededed; */
+        background: #2d2d2d;
     }
     
     #name h1 {
@@ -96,11 +104,13 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
     
     #contactDetails ul li {
         margin-bottom: 3px;
-        color: #444;
+        /* color: #444; */
+        color: peachpuff;
     }
     
     #contactDetails ul li a, a[href^=tel] {
-        color: #444; 
+        /* color: #444;  */
+        color: papayawhip;
         text-decoration: none;
         -webkit-transition: all .3s ease-in;
         -moz-transition: all .3s ease-in;
@@ -115,7 +125,8 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
     
     
     section {
-        border-top: 1px solid #dedede;
+        /* border-top: 1px solid #dedede; */
+        border-top: 1px solid pink;
         padding: 20px 0 0;
     }
     
@@ -141,7 +152,8 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
         font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
         font-style: italic;
         font-size: 1.5em;
-        color: #cf8a05;
+        /* color: #cf8a05; */
+        color: papayawhip;
     }
     
     .sectionContent h2 {
@@ -154,6 +166,7 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
         font-size: 0.8em;
         font-style: italic;
         margin-bottom: 3px;
+        color: papayawhip;
     }
     
     .keySkills {
@@ -163,7 +176,8 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
         column-count:3;
         margin-bottom: 20px;
         font-size: 1em;
-        color: #444;
+        /* color: #444; */
+        color: papayawhip;
     }
     
     .keySkills ul li {
