--- a/res.css
+++ b/res.css
@@ -123,7 +123,14 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
         color: #cf8a05;
     }
     
-    
+    #paperlink {
+        color: palevioletred;
+    }
+
+#paperlink:hover {
+    color: papayawhip;
+}
+
     section {
         /* border-top: 1px solid #dedede; */
         border-top: 1px solid pink;
