--- a/style.css
+++ b/style.css
@@ -2,24 +2,12 @@
   box-sizing: border-box;
 }
 
-[class *="col-"] {
-float: left;
-padding: 10px;
-}
-
 body {
-
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     line-height: 34px;
     color: #777777;
-    /* background: url("../images/concrete_seamless.png"); */
     background:  black;
     color: white;
-  }
-  
-  * {
-    box-sizing: border-box;
   }
 
 
@@ -31,13 +19,6 @@ display: flex;
 justify-items: left;
 }
 
-  
-#navy{
-  font-family: 'Roboto Mono', monospace;
-    color: white;
-    font-size: 14px;
-}
-
 
   /* general */
   .container {
@@ -47,25 +28,10 @@ justify-items: left;
     clear: both;
   }
   
-
-  #masthead {
-    position: fixed;
-    z-index: 99;
-    width: 100%;
-    margin: 0 0 30px;
-    overflow: auto;
-    color: #ff80bf;
-    background: black;
-    /* background: #ffffff; */
-    /* border-bottom: 2px solid #cccccc; */
-    border-bottom: 2px solid black;
-  }
-  
   #nameLogo {
     float: left;
     width: 250px;
     height: 90px;
-    /* font-family: Georgia, Times, "Times New Roman", serif; */
     font-family: 'Roboto Mono', monospace;
     font-size: 30px;
     font-weight: 700;
@@ -73,8 +39,6 @@ justify-items: left;
     color: #ffffff;
     text-align: center;
     text-decoration: none;
-    /* background: #4aaaa5; */
-    background: black;
   }
 
   .dropbtn {
@@ -95,37 +59,20 @@ justify-items: left;
   text-decoration: none;
 }
 
-  .dropbtn:hover,
-  .dropbtn:focus {
-    background-color: black;
+  #ct {
+    margin-left: 20%;
+    display: inline-block;
     font-family: 'Roboto Mono', monospace;
-    /* margin-left: 30%; */
-        /* width: 40%; */
-        color: 	#FFC0CB;
-  }
+    color: 	white;
+}
 
-  #myInput {
-    box-sizing: border-box;
-    /* margin-left: 30%; */
-
-    background-position: 14px 12px;
-    background-repeat: no-repeat;
-    font-size: 16px;
-    padding: 14px 20px 12px 45px;
-    border: none;
-    border-bottom: 1px solid black;
-    font-family: 'Roboto Mono', monospace;
-    color: 	#FFC0CB;
-  }
-
-  #myInput:focus {
-    outline: 3px solid #ddd;
-    font-family: 'Roboto Mono', monospace;
-    /* margin-left: 30%; */
-    color: 	purple;
-  }
-
-  .dropdown {
+#cmd {
+  margin-left: 25%;
+  display: inline-block;
+  font-family: 'Roboto Mono', monospace;
+  color: yellowgreen;
+}
+  .dropdown{
     position: relative;
     display: inline-block;
     font-family: 'Roboto Mono', monospace;
@@ -141,40 +88,11 @@ justify-items: left;
     color: 	#FFC0CB;
   }
 
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: black;
-    min-width: 230px;
-    overflow: auto;
-    border: 1px solid black;
-    z-index: 1;
-    font-family: 'Roboto Mono', monospace;
-color: 	#FFC0CB;
-
-  }
-
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    font-family: 'Roboto Mono', monospace;
-    color: 	#FFC0CB;
-
-  }
-
   .dropdown a:hover {
-    background-color: black;
     font-family: 'Roboto Mono', monospace;
     color: 	#FFC0CB;
   }
 
-  .show {
-    font-family: 'Roboto Mono', monospace;
-    display: block;
-color: 	#FFC0CB;
-  }
 
   
 #contact a {
@@ -186,10 +104,10 @@ color: 	#FFC0CB;
   color: palevioletred;
 }
 
-
 @media only screen and (max-width: 600px) {
-  #nameLogo
-  #contact
+  #nameLogo, #cmd, #contact, button a {
+width: 100%;
+}
 
 }
 
