--- a/style.css
+++ b/style.css
@@ -104,8 +104,61 @@ justify-items: left;
   color: palevioletred;
 }
 
+
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: pink;
+  margin: auto;
+  padding: 20px;
+  border: 2px solid #888;
+  width: 80%;
+  /* height: auto; */
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+
 @media only screen and (max-width: 600px) {
-  #nameLogo, #cmd, #contact, button a {
+  #nameLogo, #cmd, #contact, button a , #ct{
 width: 100%;
 }
 
